--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<properties>
 		<zk.version>6.5.1</zk.version>
 		<spring.version>3.1.2.RELEASE</spring.version>
+		<joda.time.version>2.1</joda.time.version>
 	</properties>
 	<packaging>war</packaging>
 	<name>Productivizer Application to Become More Productive</name>
@@ -55,6 +56,13 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
+		</dependency>
+		
+		<!-- Utilities -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${joda.time.version}</version>
 		</dependency>
 	</dependencies>
 	
